# app/Filament/Resources/Contacts/ContactResource.php
@@ -1,0 +1,78 @@
+<?php
+
+namespace App\Filament\Resources\Contacts;
+
+use App\Filament\Resources\Contacts\Pages\CreateContact;
+use App\Filament\Resources\Contacts\Pages\EditContact;
+use App\Filament\Resources\Contacts\Pages\ListContacts;
+use App\Filament\Resources\Contacts\Schemas\ContactForm;
+use App\Filament\Resources\Contacts\Tables\ContactsTable;
+use App\Models\Contact;
+use BackedEnum;
+use Filament\Resources\Resource;
+use Filament\Schemas\Schema;
+use Filament\Support\Icons\Heroicon;
+use Filament\Tables\Table;
+use Illuminate\Database\Eloquent\Builder;
+use Illuminate\Database\Eloquent\SoftDeletingScope;
+
+class ContactResource extends Resource
+{
+    protected static ?string $model = Contact::class;
+
+    protected static string|BackedEnum|null $navigationIcon = Heroicon::OutlinedUserGroup;
+
+    protected static ?int $navigationSort = 10;
+
+    public static function getNavigationLabel(): string
+    {
+        return __('contacts.contacts');
+    }
+
+    public static function getModelLabel(): string
+    {
+        return __('contacts.contact');
+    }
+
+    public static function getPluralModelLabel(): string
+    {
+        return __('contacts.contacts');
+    }
+
+    public static function getNavigationGroup(): ?string
+    {
+        return 'Contacts';
+    }
+
+    public static function form(Schema $schema): Schema
+    {
+        return ContactForm::configure($schema);
+    }
+
+    public static function table(Table $table): Table
+    {
+        return ContactsTable::configure($table);
+    }
+
+    public static function getRelations(): array
+    {
+        return [];
+    }
+
+    public static function getPages(): array
+    {
+        return [
+            'index' => ListContacts::route('/'),
+            'create' => CreateContact::route('/create'),
+            'edit' => EditContact::route('/{record}/edit'),
+        ];
+    }
+
+    public static function getRecordRouteBindingEloquentQuery(): Builder
+    {
+        return parent::getRecordRouteBindingEloquentQuery()
+            ->withoutGlobalScopes([
+                SoftDeletingScope::class,
+            ]);
+    }
+}
