# resources/lang/en/contacts.php
@@ -1,0 +1,36 @@
+<?php
+
+return [
+    'contact' => 'Contact',
+    'contacts' => 'Contacts',
+    'person' => 'Person',
+    'organization' => 'Organization',
+    'first_name' => 'First Name',
+    'middle_name' => 'Middle Name',
+    'last_name' => 'Last Name',
+    'organization_name' => 'Organization Name',
+    'display_name' => 'Name',
+    'email' => 'Email',
+    'phone' => 'Phone',
+    'nationality' => 'Nationality',
+    'tax_registration_number' => 'Tax Registration Number',
+    'address' => 'Address',
+    'address_line_1' => 'Address Line 1',
+    'address_line_2' => 'Address Line 2',
+    'city' => 'City',
+    'country' => 'Country',
+    'client' => 'Client',
+    'counterparty' => 'Counterparty',
+    'is_client' => 'Client',
+    'is_counterparty' => 'Counterparty',
+    'notes' => 'Notes',
+    'labels' => 'Labels',
+    'parent_organization' => 'Parent Organization',
+    'type' => 'Type',
+    'basic_info' => 'Basic Info',
+    'contact_info' => 'Contact Info',
+    'classification' => 'Classification',
+    'created_success' => 'Contact created successfully',
+    'updated_success' => 'Contact updated successfully',
+    'deleted_success' => 'Contact deleted successfully',
+];
